--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         <i class="fa fa-star-half-o"></i>
                     </div>
                     <img src="images/user-1.png">
-                    <h3>Mia Khalifa</h3>
+                    <h3>Sania Mirza</h3>
                 </div>
                 <div class="col-3">
                     <i class="fa fa-quote-left"></i>
@@ -261,7 +261,7 @@
                         <i class="fa fa-star-half-o"></i>
                     </div>
                     <img src="images/user-2.png">
-                    <h3>Johnny Sins</h3>
+                    <h3>John Doe</h3>
                 </div>
                 <div class="col-3">
                     <i class="fa fa-quote-left"></i>
@@ -274,7 +274,7 @@
                         <i class="fa fa-star-half-o"></i>
                     </div>
                     <img src="images/user-3.png">
-                    <h3>Mia Malkova</h3>
+                    <h3>Jennifer Lauren</h3>
                 </div>
             </div>
         </div>
